--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Bayesian MLP**"
+    "#### Bayesian MLP"
    ]
   },
   {
@@ -882,7 +882,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Backtest"
+    "#### Frequentist MLP"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backtest"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bayesian MLP"
    ]
   },
   {
@@ -946,6 +962,14 @@
     "df_backtest, mape = create_backtest_dataset(model, data, training=False)\n",
     "backtest_plot(ticker, df_backtest, mape, data.test_period)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Frequentist MLP"
+   ]
   }
  ],
  "metadata": {
@@ -964,7 +988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.9 (tags/v3.9.9:ccb0e6a, Nov 15 2021, 18:08:50) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
