--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -71,10 +71,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torchbnn \n",
-    "from torchsummary import summary\n",
-    "\n",
-    "# from langevin_sampling.SGLD import SGLD\n",
-    "# https://github.com/alisiahkoohi/Langevin-dynamics/blob/master/langevin_sampling/SGLD.py"
+    "from torchsummary import summary"
    ]
   },
   {
@@ -114,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1314,30 +1311,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GS-bnn-1.pt\n"
+      "MSFT-bnn-1.pkl\n"
      ]
     }
    ],
    "source": [
     "# generate 100 predictions per day in the test set \n",
-    "preds_bnn_te = generate_price_distribution(data, models[\"bnn\"], training=False)\n",
+    "# preds_bnn_te = generate_price_distribution(data, models[\"bnn\"], training=False)\n",
     "\n",
     "# save average predicted prices to pickle\n",
     "model = \"bnn\"\n",
     "version = \"1\"\n",
     "\n",
-    "file_name = generate_file_name(ticker, model, version)\n",
+    "file_name = generate_file_name(ticker, model, version, extension=\".pkl\")\n",
     "print(file_name)\n",
     "\n",
-    "with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"wb\") as f: \n",
-    "    dump(preds_bnn_te, f)\n",
+    "# with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"wb\") as f: \n",
+    "#     dump(preds_bnn_te, f)\n",
     "\n",
     "with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"rb\") as f: \n",
     "    preds_bnn_te = load(f)"
@@ -1438,30 +1435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GS-bnn_kl-1.pt\n"
+      "MSFT-bnn_kl-1.pkl\n"
      ]
     }
    ],
    "source": [
     "# generate 100 predictions per day in the test set \n",
-    "preds_bnn_kl_te = generate_price_distribution(data, models[\"bnn_kl\"], training=False)\n",
+    "# preds_bnn_kl_te = generate_price_distribution(data, models[\"bnn_kl\"], training=False)\n",
     "\n",
     "# save average predicted prices to pickle\n",
     "model = \"bnn_kl\"\n",
     "version = \"1\"\n",
     "\n",
-    "file_name = generate_file_name(ticker, model, version)\n",
+    "file_name = generate_file_name(ticker, model, version, extension=\".pkl\")\n",
     "print(file_name)\n",
     "\n",
-    "with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"wb\") as f: \n",
-    "    dump(preds_bnn_kl_te, f)\n",
+    "# with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"wb\") as f: \n",
+    "#     dump(preds_bnn_kl_te, f)\n",
     "\n",
     "with open(file=BACKUP_PATH+\"preds/\"+file_name, mode=\"rb\") as f: \n",
     "    preds_bnn_kl_te = load(f)"
